# TA-octopusenergy

./: .appinspect.manualcheck.yaml  .uccignore  globalConfig.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-test.yaml
package/: app.manifest
package/default/: app.conf  inputs.conf  props.conf  restmap.conf  server.conf  transforms.conf  web.conf
package/default/data/ui/nav/: default.xml
package/default/data/ui/views/: energy_usage.xml
package/lib/: requirements.txt
reactsrc/: CustomInputCell.js
