[tool.poetry]
name = "TA-octopusenergy"
version = "0.1.0"
description = ""
authors = ["Will Searle <will@livehybrid.com>"]

[tool.poetry.dependencies]
splunk-add-on-ucc-framework = "^5.48.2"
requests = "^2.31.0"
htmldom = "^2.0"
grip = "^4.6.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
